force-app/main/default/objects/KanbanAttachment__c/KanbanAttachment__c.object-meta.xml
<CustomObject>
    <label>Kanban Attachment</label>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>