force-app/main/default/objects/KanbanAttachment__c/fields/CoverURL__c.field-meta.xml
<CustomField>
    <fullName>CoverURL__c</fullName>
    <label>Cover URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>