force-app/main/default/objects/KanbanAttachment__c/fields/IsCover__c.field-meta.xml
<CustomField>
    <fullName>IsCover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cover</label>
    <type>Checkbox</type>
</CustomField>