force-app/main/default/objects/KanbanAttachment__c/fields/KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>KanbanCard__c</fullName>
    <label>Kanban Card</label>
    <referenceTo>KanbanCard__c</referenceTo>
    <relationshipName>KanbanAttachments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>