force-app/main/default/objects/KanbanAttachment__c/fields/PreviewURL__c.field-meta.xml
<CustomField>
    <fullName>PreviewURL__c</fullName>
    <label>Preview URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>