force-app/main/default/objects/KanbanAttachment__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>